--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -59,7 +59,9 @@
 	));
 
 /* Basic */
-
+    html {
+        scroll-behavior: smooth;
+    }
 	body {
 		background: #fff;
 		font-family: 'Source Sans Pro', sans-serif;
