--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,7 +1,6 @@
 @import 'libs/vars';
 @import 'libs/functions';
 @import 'libs/mixins';
-@charset "UTF-8";
 @import url("font-awesome.min.css");
 @import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,600");
 
@@ -59,9 +58,6 @@
 	));
 
 /* Basic */
-    html {
-        scroll-behavior: smooth;
-    }
 	body {
 		background: #fff;
 		font-family: 'Source Sans Pro', sans-serif;
@@ -211,7 +207,6 @@
 		&.avatar48 {
 			width: 48px;
 			height: 48px;
-			background: #f00;
 
 			img {
 				width: 48px;
@@ -1045,3 +1040,5 @@
 			}
 
 	}
+
+@import 'modifications';
