wrote Userscripts page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2466,6 +2466,10 @@ html {
   opacity: 0.9;
 }
 
+span.code {
+  font-family: "Courier New", Courier, monospace;
+}
+
 .button {
   margin-left: 0.6rem;
   margin-right: 0.6rem;
