--- a/assets/sass/_modifications.scss
+++ b/assets/sass/_modifications.scss
@@ -113,6 +113,10 @@ html {
     }
 }
 
+span.code{
+    font-family: 'Courier New', Courier, monospace;
+}
+
 .button{
     margin-left: 0.6rem;
     margin-right: 0.6rem;
