--- a/assets/sass/_modifications.scss
+++ b/assets/sass/_modifications.scss
@@ -73,6 +73,18 @@ html {
         &.storage{
             background-image: url(../../images/banner-storage.jpg);
         }
+        &.maxq{
+            background-image: url(../../images/banner-maxq-v2.jpg);
+        }
+        &.design{
+            background-image: url(../../images/banner-design.jpg);
+        }
+        &.twib{
+            background-image: url(../../images/banner-twib.jpg);
+        }
+        &.mockups{
+            background-image: url(../../images/banner-mockups.jpg);
+        }
     }
 }
 
