updated TWIB page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2375,8 +2375,17 @@ span.nbs {
   font-weight: normal;
 }
 
+strong.notice {
+  font-weight: bold;
+  color: maroon;
+}
+
 html {
   scroll-behavior: smooth;
+}
+
+#info blockquote {
+  text-align: left;
 }
 
 .flexbox {
