added Landman page

--- a/assets/sass/_modifications.scss
+++ b/assets/sass/_modifications.scss
@@ -94,6 +94,9 @@ html {
         &.mockups{
             background-image: url(../../images/banner-mockups.jpg);
         }
+        &.landman{
+            background-image: url(../../images/banner-landman.jpg);
+        }
     }
 }
 
